--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,24 +1,21 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<style>
+  .nav a{
+    color: white;
+  }
+</style>
 <footer style="color:white ;">
   <ul class="nav justify-content-center" style="font-size:30px;">
-    <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2  mx-3"><i
+    <li class="nav"><a target="_blank" href="/" class="nav-link px-2  mx-3"><i
           class="fa fa-instagram"></i></a>
     </li>
-    <li class="nav-item"><a target="_blank" href="/" class="nav-link px-2 mx-3"><i
+    <li class="nav"><a target="_blank" href="/" class="nav-link px-2 mx-3"><i
           class="fa fa-facebook-f"></i></a>
     </li>
-    <li class="nav-item"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-github" aria-hidden="true"></i></a></li>
-    <li class="nav-item"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+    <li class="nav"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-github" aria-hidden="true"></i></a></li>
+    <li class="nav"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
     </li>
   </ul>
-  <!-- <ul class="nav justify-content-center mb-3" style="border-bottom:3px solid yellow ;">
-    <li class="active"><a href="/" class="nav-link px-2 ">Home</a></li>
-    <li><a href="#about" class="nav-link px-2 ">About Us</a></li>
-    <li><a href="/events" class="nav-link px-2 ">Events</a></li>
-    <li><a href="/OurTeam" class="nav-link px-2 ">OurTeam</a></li>
-    <li><a href="/Gallery" class="nav-link px-2 ">Gallery</a></li>
-  </ul> -->
   <p style="font-size: 20px" class="text-center">Nirmaan-Club</p>
 </footer>
 <script src="/js/style.js"></script>
