--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -58,9 +58,9 @@
 
   .navbar-brand img{
     width: 100px;
-    height: 40px;
+    height: 60px;
   }
-
+/* 
   .navbar {
     padding: 17px;
-  }
+  } */
