--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/images/NewLogo1.png">
+    <link rel="icon" href="/images/Picture.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="position: absolute;z-index: 1;width: 100%; background-color:black ;">
+    <div class="navbarposition" style="position: absolute;z-index: 1;width: 100%; background-color:#dada1a ;">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="cont">
