--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/images/NewLogo1.png">
+    <link rel="icon" href="/images/Picture.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <div class="navbarposition" style="width: 100%; background-color: rgb(0, 0, 0)" );>
+    <div class="navbarposition" style="width: 100%; background-color: #dada1a";>
         <%- include("partials/navbar.ejs") %>
     </div>
 
