--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" href="/"><img src="" alt="Nirmaan-Logo"></a>
+  <a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Nirmaan-Logo"></a>
   <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <div class="line"></div>
