--- a/templates/OurTeam.ejs
+++ b/templates/OurTeam.ejs
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="position: absolute;z-index: 1; width: 100%; background-color: #0000006e;">
+    <div class="navbarposition" style="position: absolute;z-index: 1; width: 100%;">
         <%- include("partials/navbar.ejs") %>
     </div>
 
