--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="navbarposition" style="position: absolute;
+    <div class="navbarposition" style="position: absolute;background-color: #dada1a;
     width: 100%;
-    z-index: 1;; background:#dada1a;">
+    z-index: 1;; ">
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="site-warp" style="padding-bottom: 50px;width: 100% ;height:auto;">
