--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,22 +1,33 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-  .nav a{
+  .nav a {
     color: white;
+  }
+
+  .nav a:hover {
+    color: yellow;
   }
 </style>
 <footer style="color:white ;">
   <ul class="nav justify-content-center" style="font-size:30px;">
-    <li class="nav"><a target="_blank" href="/" class="nav-link px-2  mx-3"><i
+    <li class="nav"><a target="_blank" href="https://www.instagram.com/nirmaan_iitmandi/" class="nav-link px-2  mx-3"><i
           class="fa fa-instagram"></i></a>
     </li>
-    <li class="nav"><a target="_blank" href="/" class="nav-link px-2 mx-3"><i
+    <li class="nav"><a target="_blank" href="https://www.facebook.com/nirmaaniitmandi/" class="nav-link px-2 mx-3"><i
           class="fa fa-facebook-f"></i></a>
     </li>
-    <li class="nav"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-github" aria-hidden="true"></i></a></li>
-    <li class="nav"><a target="_blank" href="/" class="nav-link" ><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+    <li class="nav"><a target="_blank" href="https://wiki.iitmandi.co.in/p/Nirmaan_Club" class="nav-link"><i
+          class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+    <li class="nav"><a target="_blank" href="https://github.com/NirmaanClub" class="nav-link"><i class="fa fa-github"
+          aria-hidden="true"></i></a></li>
+    <li class="nav"><a target="_blank" href="https://wa.me/917488011618" class="nav-link"><i class="fa fa-whatsapp"
+          aria-hidden="true"></i></a></li>
+    <li class="nav"><a target="_blank" href="mailto:nirmaan_club@iitmandi.ac.in" class="nav-link"><i
+          class="fa fa-envelope" aria-hidden="true"></i></a>
     </li>
   </ul>
-  <p style="font-size: 20px" class="text-center">Nirmaan-Club</p>
+  <p style="font-size: 20px" class="text-center">Nirmaan Club | <a target="_blank" style="color: yellow;"
+      href="https://iitmandi.co.in/">SNTC</a> | IIT-Mandi</p>
 </footer>
 <script src="/js/style.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
