--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -52,19 +52,30 @@ html ,body{
     overflow-x: hidden;
 }
 
+.navitem {
+    color: white ;
+}
 .titlebox {
-    width: 125%;
-    height: 250px;
-    /* background-color: yellow; */
+    width: 130%;
+    height: 350px;
+    background-color: #0000006e;
     color: black;
-    transform: skew(0deg, -3deg) translateX(-101px);
+    transform: skew(0deg, -4.5deg) translate(-101px,-100px);
     z-index: -1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.titlebox h1{
-    transform: skew(-8deg,3deg);
-    margin-top: 100px;
-    margin-left: 200px;
+
+.titlebox h1 {
+    transform: skew(-8deg, 3deg);
+    color: white;
+    margin-left: 180px;
+    font-size: 3rem;
+    margin-top: 150px;
+}
+
+.title {
+    text-transform: uppercase;
+    font-size: 2rem;
 }
