--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,6 +13,8 @@ body {
     opacity: 0;
     transition: all 0.8s ease;
     background-color: rgba(0, 0, 0, 0.5);
+    flex-direction: column;
+    justify-content: center;
 }
 
 .info p {
@@ -27,7 +29,7 @@ body {
     height: 100vh;
 }
 
-.image img {
+.images img {
     width: 100%;
     height: 100vh;
     z-index: -1;
@@ -40,15 +42,33 @@ body {
         width: 100% !important;
         font-size: 15px;
         transform: translateY(315px) !important;
-        height: 256px;
+        height: 311px;
     }
-
     .title {
         margin: 100px auto !important;
         justify-content: flex-start !important;
         align-items: center !important;
     }
 
+}
+
+@media only screen and (max-width:550px){
+    .info p{
+        font-size: 13px;
+
+    }
+    .info h2{
+        font-size: 15px;
+    }
+}
+@media only screen and (max-width:450px){
+    .info p{
+        font-size: 11px;
+
+    }
+    .info h2{
+        font-size: 9px;
+    }
 }
 
 @media only screen and (max-width:450px){
@@ -101,13 +121,13 @@ body {
 
 .title h1 {
     font-size: 4rem;
-    color: black;
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
     text-shadow: 2px 2px 10px yellow;
 }
 
 .title span {
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 2.3rem;
     text-shadow: 2px 2px 10px yellow;
 }
@@ -129,3 +149,4 @@ body {
     }
 
 }
+
