--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -1,4 +1,9 @@
 <link rel="stylesheet" href="/css/navbar.css">
+<style>
+  .navitem  {
+    text-transform: uppercase;
+  }
+</style>
 <nav class="navbar navbar-expand-lg ">
   <a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Nirmaan-Logo"></a>
   <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -10,12 +15,11 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class=" navitem  nav-link" href="/">Home </a>
-      <a class=" navitem nav-link" href="/#about">About Us</a>
+      <a class=" navitem nav-link" href="/">About Us</a>
+      <a class=" navitem nav-link" href="/events">Activities</a>
       <a class=" navitem nav-link" href="/gallery">Gallery</a>
-      <a class=" navitem nav-link" href="/events/">Events</a>
+      <a class=" navitem nav-link" href="/">Fest&nbsp;&nbsp;</a>
       <a class=" navitem nav-link" href="/ourteam">OurTeam</a>
-      <a class=" navitem nav-link" href="/#fest">Fest&nbsp;&nbsp;</a>
-      <a class=" navitem nav-link" href="/#contact">Contact</a>
     </div>
   </div>
 </nav>
