gallery db connection setup done

--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -34,20 +34,20 @@
             </h1>
         </div>
         <!-- all events -->
-        <% for(let i=0;i<3;i++){%>
+        <% for(let key in gallery){%>
             <!-- for one event -->
             <div class="event contai">
                 <div class="">
-                    <h2 class="text-center">First Event</h2>
+                    <h2 class="text-center"><%=key%></h2>
                     <br>
                 </div>
                 <hr>
                 <div class="d-flex flex-wrap justify-content-center">
                     <!-- event images -->
-                    <% for(let i=0;i<8;i++){%>
+                    <% for(let i=0;i<gallery[key][0].imglist.length;i++){%>
                         <div class="img-container" style="width:300px; height:250px; ">
                             <img class="w-100 h-100"
-                                src="https://static.remove.bg/remove-bg-web/ea3c274e1b7f6fbbfe93fad8b2b13d7ef352f09c/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
+                                src="<%=gallery[key][0].imglist[i]%>"
                                 alt="">
                         </div>
                         <%}%>
