--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -10,10 +10,10 @@
 </style>
 <footer style="color:white ;">
   <ul class="nav justify-content-center" style="font-size:30px;">
-    <li class="nav"><a target="_blank" href="https://www.instagram.com/nirmaan_iitmandi/" class="nav-link px-2  mx-3"><i
+    <li class="nav"><a target="_blank" href="https://www.instagram.com/nirmaan_iitmandi/" class="nav-link   "><i
           class="fa fa-instagram"></i></a>
     </li>
-    <li class="nav"><a target="_blank" href="https://www.facebook.com/nirmaaniitmandi/" class="nav-link px-2 mx-3"><i
+    <li class="nav"><a target="_blank" href="https://www.facebook.com/nirmaaniitmandi/" class="nav-link  "><i
           class="fa fa-facebook-f"></i></a>
     </li>
     <li class="nav"><a target="_blank" href="https://wiki.iitmandi.co.in/p/Nirmaan_Club" class="nav-link"><i
