--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -18,7 +18,7 @@
       <a class=" navitem nav-link" href="/">About Us</a>
       <a class=" navitem nav-link" href="/events">Activities</a>
       <a class=" navitem nav-link" href="/gallery">Gallery</a>
-      <a class=" navitem nav-link" href="/">Fest&nbsp;&nbsp;</a>
+      <a class=" navitem nav-link" href="/fest">Fest&nbsp;&nbsp;</a>
       <a class=" navitem nav-link" href="/ourteam">OurTeam</a>
     </div>
   </div>
