--- a/templates/error.ejs
+++ b/templates/error.ejs
@@ -183,7 +183,7 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="width: 100%; background-color: #dada1a;">
+    <div class="navbarposition" style="width: 100%; background-image: linear-gradient(to bottom right, red, yellow);">
         <%- include("partials/navbar.ejs") %>
     </div>
 
