--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -43,22 +43,35 @@
         box-shadow: 2px 2px 10px grey;
         border-radius: 10px;
     }
-    .images::before{
+    .conti{
+        background-color: rgb(0,0,0,0.5);
+    }
+    .conti::before{
         content: "";
         position: absolute;
         top: 86px;
         right: 0;
         left: 0;
         height: 100vh;
-        background-color: rgb(0,0,0,0.5);
+        background: url('https://1.bp.blogspot.com/-5bXvcPUMuec/XtpDMQ0PkWI/AAAAAAAAACc/paGedng3likhcsVWCAb05Slbu4JAOC-TwCK4BGAsYHg/d/headerbanner2.jpg') no-repeat center center/cover;
     }
     .title{
         z-index: 100000;
     }
+    .conti::after{
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 100vh;
+        top: 86px;
+        background-color: rgb(0,0,0,0.5);
+    }
 </style>
 
 <body>
-    <div class="navbarposition" style="width: 100%; background-color: #dada1a" ;>
+    <div class="navbarposition" style="width: 100%; background-image: linear-gradient(to bottom right, rgb(230 247 59), rgb(255 80 0));" ;>
         <%- include("partials/navbar.ejs") %>
     </div>
 
@@ -81,10 +94,8 @@
             <h1>Nirmaan-Club</h1>
             <span>IIT-Mandi</span>
         </div>
-        <div class="images">
-            <img src="https://1.bp.blogspot.com/-5bXvcPUMuec/XtpDMQ0PkWI/AAAAAAAAACc/paGedng3likhcsVWCAb05Slbu4JAOC-TwCK4BGAsYHg/d/headerbanner2.jpg"
-                alt="">
-        </div>
+        <!-- <div class="images">
+        </div> -->
     </div>
 
     
