major changes done responsiveness done

--- a/static/css/ourteam.css
+++ b/static/css/ourteam.css
@@ -87,8 +87,6 @@
     transition: all 0.3s ease-in-out;
 }
 
-
-
 .profilecard .links::after {
     content: "";
     width: 250%;
@@ -133,23 +131,24 @@ body {
 }
 
 .titlebox {
-    width: 130%;
-    height: 350px;
+    width: 100%;
+    /* height: 350px;
     background-color: #0000006e;
     color: white;
     transform: skew(0deg, -4.5deg) translate(-101px,-100px);
     z-index: -1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .titlebox h1 {
-    transform: skew(-8deg, 5deg);
-    color: white;
-    margin-left: -240px;
+    /* transform: skew(-8deg, 5deg); */
+    color: rgb(0, 0, 0);
+    /* margin-left: -240px; */
     font-size: 3rem;
-    margin-top: 100px;
+    font-weight: bold;
+    margin-top: 50px;
 }
 
 .title {
