--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -71,14 +71,13 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="width: 100%; background-image: linear-gradient(to bottom right, rgb(230 247 59), rgb(255 80 0));" ;>
+    <div class="navbarposition" style="width: 100%; background-color: yellow;">
         <%- include("partials/navbar.ejs") %>
     </div>
 
     <div class="conti">
         <div class="info">
             <h2>ABOUT US</h2>
-            <!-- <br> -->
             <p> Nirmaan Club is a Technical Club of IIT Mandi where someone can explore the beauty of civil engineering
                 and related domains beyond academics!!
                 <br>
