--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,7 +1,6 @@
 .cont {
     min-height: 65.2vh;
-    width: 90%;
-    margin: 0px 90px auto;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -53,26 +52,26 @@ html ,body{
 }
 
 .navitem {
-    color: white ;
+    color: BLACK ;
 }
 .titlebox {
-    width: 130%;
-    height: 350px;
-    background-color: #0000006e;
-    color: black;
-    transform: skew(0deg, -4.5deg) translate(-101px,-100px);
-    z-index: -1;
-    display: flex;
+    width: 100%;
+    /* height: 100px; */
+    /* background-color: #dada1a; */
+    /* color: black; */
+    /* transform: skew(0deg, -3deg) translateX(-101px); */
+    /* z-index: -1; */
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .titlebox h1 {
-    transform: skew(-8deg, 3deg);
-    color: white;
-    margin-left: 180px;
+    /* transform: skew(-8deg, 3deg); */
+    color: black;
+    /* margin-left: -240px; */
     font-size: 3rem;
-    margin-top: 150px;
+    font-weight: bold;
 }
 
 .title {
