--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,8 +33,8 @@ body {
     .info {
         width: 100% !important;
         font-size: 15px;
-        transform: translateY(315px) !important;
-        height: 311px;
+        /* transform: translateY(315px) !important;
+        height: 311px; */
     }
     .title {
         margin: 100px auto !important;
