--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -15,7 +15,7 @@
   .line {
     width: 20px;
     height: 2px;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     margin-top: 3px;
   }
 
@@ -40,10 +40,10 @@
     .collapse {
       position: unset;
     }
-
+/* 
     .navbar{
       background-color: #dada1a;
-    }
+    } */
     .navitem{
       color: black;
     }
