--- a/templates/OurTeam.ejs
+++ b/templates/OurTeam.ejs
@@ -19,12 +19,12 @@
 
 <style>
 .navitem {
-    color: white ;
+    color: rgb(0, 0, 0) ;
 }
 </style>
 
 <body>
-    <div class="navbarposition" style="position: absolute;z-index: 1; width: 100%;">
+    <div class="navbarposition" style=" width: 100%;background-color: white;">
         <%- include("partials/navbar.ejs") %>
     </div>
 
@@ -35,12 +35,12 @@
     </div>
 
     <div class="sitewarp"
-        style="padding-bottom:40px ;width:100%;min-height:100vh;height: auto;background-color: rgb(0,0,0,0);">
+        style="padding-bottom:40px">
         <div class="cont">
             <% for(let team in teams){%>
                 <div class="title">
                     <h1 style="color: black;">
-                        <br><br>
+                        <br>
                         <%=team%>
                     </h1>
                 </div>
