--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -18,54 +18,42 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <style>
-    .eventname {
-        height: auto;
-        min-height: 350px;
-        width: 100%;
-        margin: 20px auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .boxes {
-        box-shadow: 5px 5px 15px 1px grey;
-        height: 300px;
-        margin: 20px;
-    }
-
-    .boxes img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    .one:hover {
+        transform: translateY(0px);
+        transition: all 0.5s;
     }
 
     .one {
-        width: 30%;
+        transform: translateY(10px);
+        transition: all 0.5s;
     }
 
-    .titlename {
-        margin: 100px auto 0px auto;
-        font-size: 3rem;
+    .boxes{
+        border-radius: 20px;
+    }
+    .boxes img{
+        border-radius: 20px 20px 0px 0px ;
+    }
+
+    .boxes {
+        min-height: 350px;
+        height: auto;
+    }
+    .boxes span{
+        font-size: 1.5rem;
+        color: black;     
+    }
+    .boxes{
         text-align: center;
-    }
-
-    .imagebx {
-        object-fit: cover;
-    }
-
-    hr {
-        width: 70%;
-        border-top: 1px solid black !important;
-        margin: auto;
+        background: white;
     }
 </style>
 
 
 <body>
-    <div class="navbarposition" style="position: absolute;background-color: #dada1a;
+    <div class="navbarposition" style="background-color: white;";
     width: 100%;
-    z-index: 1;; ">
+    z-index: 1;>
         <%- include("partials/navbar.ejs") %>
     </div>
     <div class="site-warp" style="padding-bottom: 50px;width: 100% ;height:auto;">
@@ -85,10 +73,13 @@
                     <% for(let i=0;i<events[event].length;i++){%>
                         <div class="one">
                             <div class="boxes">
-                                <!-- <span>name particular</span> -->
-                                <a href="/eventname?eventname=<%=event%>&event=<%= events[event][i].topic%>&num=<%= i %>" target="_blank">
+                                <a href="/eventname?eventname=<%=event%>&event=<%= events[event][i].topic%>&num=<%= i %>"
+                                    target="_blank">
                                     <img src="<%= events[event][i].image %>" alt="">
                                 </a>
+                                <span>
+                                    <%= events[event][i].topic%>
+                                </span>
                             </div>
                         </div>
                         <%}%>
