--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -18,21 +18,56 @@
 
 <style>
     body{
-        background: url('https://images.unsplash.com/photo-1527846099182-ae0369136c2a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80') no-repeat center center/cover;
+        background: url('https://images.pexels.com/photos/1323712/pexels-photo-1323712.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
         background-attachment: fixed;
+    }
+    .contai{
+        width: 100%;
+    }
+    h2{
+        color: black;
+    }
+    .imageon{
+        width: 500px;
+        margin: 20px;
+        box-shadow: 1px 1px 10px 2px grey;
+        border-radius: 20px;
+        transform: translateY(10px);
+        transition: all 0.5s;
+    }
+    .imageon img{
+        width: 100%;
+        height: 400px;
+        border-radius: 20px;
+    }
+
+    .imageon:hover{
+        transform: translateY(0px);
+        transition: all 0.5s;
+    }
+
+    @media only screen and (max-width:500px){
+        .imageon img{
+            height: unset !important;
+        }
+        .titlebox h1{
+            font-size: 25px !important;
+        }
     }
 </style>
 
 <body>
-    <div class="navbarposition" style="position: absolute;z-index: 1;width: 100%; ;">
+    <div class="navbarposition" style="width: 100%; ;">
         <%- include("partials/navbar.ejs") %>
     </div>
+    <br>
     <div class="cont">
         <div class="titlebox" style="text-align: center;">
             <h1>
                 NIRMAAN GALLERY
             </h1>
         </div>
+        <br>
         <!-- all events -->
         <% for(let key in gallery){%>
             <!-- for one event -->
@@ -45,13 +80,14 @@
                 <div class="d-flex flex-wrap justify-content-center">
                     <!-- event images -->
                     <% for(let i=0;i<gallery[key][0].imglist.length;i++){%>
-                        <div class="img-container" style="width:300px; height:250px; ">
-                            <img class="w-100 h-100"
+                        <div class="imageon">
+                            <img
                                 src="<%=gallery[key][0].imglist[i]%>"
                                 alt="">
                         </div>
                         <%}%>
                 </div>
+                <br>
             </div>
             <%}%>
     </div>
@@ -59,6 +95,20 @@
     <div class="footerposition" style="position:absolute; width: 100%; background-color: black;">
         <%- include("partials/footer.ejs") %>
     </div>
+
+
+
+
+    <script>
+        let imgdata = document.getElementsByClassName('imaged');
+        for(let i=0;i<imgdata.length;i++){
+            imgdata[i].addEventListener('click',()=>{
+                imgdata[i].firstElementChild.style.height='500px'
+                imagdata[i].firstElementChild.style.width='500px'
+            })
+        }
+    </script>
+
 </body>
 
 </html>
